--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.0.0
+asgiref==3.7.2
 astunparse==1.6.3
 beautifulsoup4==4.12.2
 blinker==1.6.2
@@ -7,6 +8,8 @@ certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
 deepface==0.0.79
+Django==4.2.6
+djangorestframework==3.14.0
 filelock==3.12.4
 fire==0.5.0
 Flask==3.0.0
@@ -47,6 +50,7 @@ retina-face==0.0.13
 rsa==4.9
 six==1.16.0
 soupsieve==2.5
+sqlparse==0.4.4
 tensorboard==2.14.1
 tensorboard-data-server==0.7.1
 tensorflow==2.14.0
