--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-decouple==3.8
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
