feat: environment setup

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ KAIROS_APP_ID=jkdajkad
 KAIROS_APP_KEY=adnadjaf
 KAIROS_BASE_URL=http://api.kairos.com/
 KAIROS_GALLERY_NAME=gallery_a
+
+# Amazon Rekognition
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION_NAME=
+AWS_REKOGNITION_COLLECTION_ID=
